# ITMO_Programming_CPP

./: README.md
Lab1/: CMakeLists.txt  geometry.h  main.cpp  polynom.h
Lab2/: CMakeLists.txt  currency.h  main.cpp
Lab4/: CMakeLists.txt  algo.h  color.h  cube.h  main.cpp
Lab5/: CMakeLists.txt  allocator.h  linkedlist.h  main.cpp  util.h
Lab6/: CMakeLists.txt  main.cpp  polynom.h
